# Karen_Beatrice_embarcatech_HBr_2025

./: Contador.md  README.md  contador projeto Readme.md
Blink/: CMakeLists.txt  README.md
Blink/vscode/: extensions.json
PicoTempAdc/: CMakeLists.txt  License  README.md
countdown_button_display/: CMakeLists.txt  README.md  teste_contador.c
internal_temp_oled_display/: CMakeLists.txt  README.md  teste3.c
joystick/: CMakeLists.txt  Joystick_1.c  README.md  teste.md
